--- a/Project Plan/Final Submission of Project Plan/19G01 - Project Plan.tex
+++ b/Project Plan/Final Submission of Project Plan/19G01 - Project Plan.tex
@@ -77,7 +77,7 @@ In the report that follows, a project plan is created for the telecommunications
 \label{sec: Project Specs}
 The aim of the project is to create a robust scheme for determining multiple holes that may be received in an image and appropriately fill these holes. in addition, the image may be subject to random burst errors which need to be identified and corrected.
 
-An image will be chosen for compression utilizing a compression technique and creating holes in the image and after transmitting, filling of those holes will result in the original image. The holes will be created manually making use of current compression algorithms (such as fractal compression for example). Once the holes are created, the image will be transmitted via a simple channel that will introduce errors randomly. The image will be received at the receiver, and knowing where the holes are present, will fill them accordingly using a different algorithm. The receiver will also have to deal with random errors that may have occurred from the channel. The received image with the filled holes will be reconstructed and presented as the final image which should coincide with the original image.
+An image will be chosen for compression utilizing a compression technique and creating holes in the image. After transmission, filling of those holes will result in the original image. The holes will be created manually with a proposed algorithm and the additional compression layer will make use of current compression algorithms (DCT or fractal compression). Once the holes are created, the image will be transmitted via a simple channel that will introduce errors randomly. The image will be received at the receiver, and knowing where the holes are present through the encoding scheme will fill them accordingly using a different algorithm. The receiver will also have to deal with random errors that may have occurred from the channel. The received image with the filled holes will be reconstructed and presented as the final image which should coincide with the original image.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -117,7 +117,7 @@ Lossy compression removes some of the data from the original file, resulting in 
 %
 \section{PROPOSED STRATEGY}
 \label{sec: Proposed Strategy}
-The proposed solution will be implemented in MATLAB and can be broken down into two sides:
+The proposed solution will be implemented in MATLAB and can be broken down into two main facets:
 \begin{itemize}
 \item Encoder side
 \item Decoder side.
@@ -145,7 +145,7 @@ Firstly, an image is loaded into MATLAB, and a PNG or BMP image is specifically 
 
 \subsection{Step 2: Convert the image to greyscale}
 \label{sec: Step 2}
-The loaded image is converted to greyscale, and the reason for this is because an image that has been imported into MATLAB creates a 3-dimensional array where the first two elements of the array represent the dimensions of the image and the third dimension is the colour map. Converting the image to a greyscale one, creates a 2-dimensional array, which are simply the dimensions of the image, where each array value correlates to the specific integer value of that specific pixel. Figure~\ref{fig: Step 2} shows an example of the outcome of converting the image to greyscale.
+The loaded image is converted to greyscale. The reason for this is because an image that has been imported into MATLAB creates a 3-dimensional array where the first two elements of the array represent the dimensions of the image and the third dimension is the colour map. Converting the image to a greyscale one, creates a 2-dimensional array, which are simply the dimensions of the image, where each array value correlates to the specific integer value of that specific pixel. Figure~\ref{fig: Step 2} shows an example of the outcome of converting the image to greyscale.
 \begin{figure}[h!]
 \renewcommand{\thefigure}{\arabic{figure}}
 \centering
@@ -187,13 +187,13 @@ Since the images that will be chosen will have dimensions divisible by 8, the fi
 
 \subsection{Step 4: Create holes in the smaller blocks}
 \label{sec: Step 4}
-With the domain pool created, holes are created by starting at the center square within the $8\times 8$ block. Starting off with the center $2\times 2$ square, the average value of those 4 pixels are calculated. Each pixel in the $2\times 2$ square is compared to the average value of the smaller square using the Chebyshev distance. The Chebyshev distance between each pixel and the average forms the basis of the similarity index that will be used in the project and it's implementation. If the value of the similarity index is less than $5$ for all pixels, a hole can be created in those 4 pixels. A larger square in the same $8\times 8$ block is checked with a size of $4\times 4$. The average of these pixels are calculated and as before compared to each value of the center square. This can continue until we reach a center square size of $6\times 6$, which we will define as the largest hole that can be made. Algorithm~\ref{alg: Creating Holes} shows a high-level algorithm for creating the holes in the blocks in the domain pool.
+With the domain pool created, holes are created by starting at the center square within the $8\times 8$ block. Starting off with the center $2\times 2$ square, the average value of those 4 pixels are calculated. Each pixel in the $2\times 2$ square is compared to the average value of the smaller square using the Chebyshev distance. The Chebyshev distance between each pixel and the average forms the basis of the similarity index that will be used in the project and its implementation. If the value of the similarity index is less than $5$ for all pixels, a hole can be created in those 4 pixels. A larger square in the same $8\times 8$ block is checked with a size of $4\times 4$. The average of these pixels are calculated and as before compared to each value of the center square. This can continue until we reach a center square size of $6\times 6$, which we will define as the largest hole that can be inserted. Algorithm~\ref{alg: Creating Holes} shows a high-level algorithm for creating the holes in the blocks in the domain pool.
 
 \begin{figure}[h!]
 \renewcommand{\thefigure}{\arabic{figure}}
 \centering
 \includegraphics[scale=0.2]{Grid.png}
-\caption{How a $8\times 8$ block (gray square) will be checked for hole creation starting with the purple square.}
+\caption{How a $8\times 8$ block (gray square) will be checked for hole creation starting with the blue square.}
 \label{fig: Grid}
 \end{figure}
 
@@ -251,11 +251,11 @@ Figure~\ref{fig: Grid} shows how each of the $8\times 8$ squares in the domain p
 
 \subsection{Step 5: Compress image using a known technique (DCT/Fractal/Wavelets)}
 \label{sec: Step 5}
-The DCT compression technique will be first utilized for the compression of the image. DCT will be performed on each block in the domain pool, and DCT is done on $8\times 8$ matrix, which is the reason the domain pool is made up of multiple $8\times 8$ blocks and that an image where the dimensions are divisible by 8 is chosen. The image is now compressed and can be transmitted into the channel.
+The DCT compression technique will be utilized for the compression of the image. DCT will be performed on each block in the domain pool. DCT is implemented on a $8\times 8$ matrix, which is the reason the domain pool is made up of multiple $8\times 8$ blocks and that an image where the dimensions are divisible by 8 is chosen. The image is now compressed and can be transmitted via the channel.
 
 \subsection{Step 6: Encode and Transfer image}
 \label{sec: Step 6}
-The image is encoded as a binary message, and when transmitted through the channel, errors are randomly introduced. The data that will be sent through the channel will be a bit stream and the errors introduced will be based off of a byte with a probability of $10^{-3}$ where the byte can then be randomized. Alternatively, each bit can be random selected to be prone to an error and the bit value flipped. 
+The image is encoded as a binary message, and when transmitted through the channel, errors are randomly introduced. The data that will be sent through the channel will be a bit stream and the errors introduced will be based off of a byte with a probability of $10^{-3}$ where the byte can then be randomized. Alternatively each bit can be randomly selected, using the same probability above, to be prone to an error and the bit value flipped. 
 
 \subsection{Step 7: Decode and Error Check}
 \label{sec: Step 7}
@@ -273,19 +273,19 @@ With the one-dimensional array sent across the channel, the blocks within the do
 %
 \section{PERFORMANCE INDEX}
 \label{sec: Performance Index}
-The nature of this project is based around current methodologies and is more research-based, and because of this results are require to present the overall performance of the proposed technique. Since MATLAB is utilized, many image compression techniques can be implemented with relative simplicity. For that reason, other compression techniques such as fractal compression or wavelets compression will be implemented after DCT compression. The DCT compression will be set as the benchmark and a comparison with the fractal or wavelets compression will be done. The values of peak-signal-to=noise-ratio (PSNR) and mean-squared-error (MSE) will be the main focus of comparison.
+The nature of this project is based around current methodologies and is more research-based. Results are required to present the overall performance of the proposed technique. MATLAB allows for relative simplicity in creating and performing many image compression techniques such as DCT. For that reason, other compression techniques such as fractal compression or wavelets compression will be implemented in addition to DCT compression. The DCT compression will be set as the benchmark and a comparison with the fractal or wavelets compression will be completed. The values of signal-to-quantization-noise ratio (SQNR), peak-signal-to-noise-ratio (PSNR) and mean-squared-error (MSE) will be the main focus of comparison.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \section{COST MANAGEMENT}
 \label{sec: Cost Management}
-The nature of this project is software based, and thus the total costs are minimal to none. Licences for the MATLAB software is already provided as a student licence by the university, and personal computers or laptops will be used.
+The nature of this project is software based, and thus the total costs are minimal to none. Licences for the MATLAB software is already provided in the form of a student licence by the university, and personal computers or laptops will be used.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \section{TIME MANAGEMENT}
 \label{sec: Time Management}
-The Project window runs from 01 July 2019 until 11 September 2019. The proposed timeline of events and duration of these events can be seen in Figure~\ref{fig: Tasks}, in conjunction with this, Figure~\ref{fig: Gantt} shows the . The project begins with the planning phase including a literature review and the development of the project plan. The overall idea and method was continuously discussed between the team of engineers and the associated supervisor. Once the project plan was approved, the engineers can begin with the execution of the plan.
+The Project window runs from 01 July 2019 until 11 September 2019. The proposed timeline of events and duration of these events can be seen in Figure~\ref{fig: Tasks}, in conjunction with this, Figure~\ref{fig: Gantt} shows the . The project begins with the planning phase including a literature review and the development of the project plan. The overall idea and method was continuously discussed between the team of engineers and the associated supervisor. Once the project plan is approved, the engineers can begin with the execution of the plan.
 
 The encoder side is tackled first while the channel can be created in parallel with that. Once the encoder and channel have been completed and tested, the decoder side of the proposed solution can be implemented. The initial implementation of the encoder will utilize DCT, and once an entire solution is created and tested using DCT, other compression techniques can be implemented in conjunction with the proposed solution. The results of the DCT compression is compared to the other implemented compression technique.
 
@@ -295,7 +295,7 @@ Based on the planned approximated time that is allocated to each task, this indi
 %
 \section{DOCUMENTATION}
 \label{sec: Documentation}
-Throughout the project window, constant meetings and discussions will be held between the engineers and the supervisor. As seen in Figure~\ref{fig: Tasks} and~\ref{fig: Gantt} the \emph{Monitoring and Control} task is run from the day after the project plan is submitted till the project is presented. All meetings have and will be documented as meeting minutes, discussing the meeting and the agenda of the project at that period of time. A private GitHub repository is created so that the engineers can constantly work on the proposed strategy while keeping all documents and helpful materials available to them at all times.
+Throughout the project window, constant meetings and discussions will be held between the engineers and the supervisor. As seen in Figure~\ref{fig: Tasks} and~\ref{fig: Gantt} the \emph{Monitoring and Control} task is run from the day after the project plan is submitted till the project is presented. All meetings have and will be documented as meeting minutes, discussing the meeting and the agenda of the project at that period of time. A GitHub repository is created so that the engineers can constantly work on the proposed strategy while keeping all documents and helpful materials available to them at all times.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
